--- a/traversing_sideways.html
+++ b/traversing_sideways.html
@@ -10,16 +10,18 @@
 	<link href="css/style.css" rel="stylesheet" type="text/css">
 	<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Dosis' rel='stylesheet' type='text/css'>
-	<
+	
 </head>
 <body>
 	<div id="container">
 		<nav>
 			<ul>
 				<li id="logoNav">CODE INSTITUTE</li>
-				<li class="stream-nav" id="stream1">Stream 1</li> <!--added class=stream nav. edited id=stream1-button-->
-				<li class="stream-nav" id="stream2">Stream 2</li>
-				<li class="stream-nav" id="stream3">Stream 3</li>
+				<li id="all_btn">All</li>
+				<li id="stream1">Stream 1</li> <!--added class=stream nav. edited id=stream1-button-->
+				<li id="stream2">Stream 2</li>
+				<li id="stream3">Stream 3</li>
+				<li id="select_btn">Select</li>
 			</ul>
 		</nav>
 		<div class="card stream1-card">  <!-- added -card to stream1-->
@@ -91,7 +93,7 @@
 		</div>
 	</div>
 	<script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
-	<!--<script type="text/javascript" src="script.js"></script> <!-- Scripts located at the bottom of the body to insure page is fully loaded before execution -->  -->
+	<!--<script type="text/javascript" src="script.js"></script> -- Scripts located at the bottom of the body to insure page is fully loaded before execution -->  
 	<script src="js/script.js"></script>
 	
 </body>
